

                              Kiji Schema Release Notes

Version 1.0.0-rc5

Version 1.0.0-rc4
  * SCHEMA-196. Instance format should not use "kiji" protocol namespace.
      Changes the instance format installed via 'kiji install' to
      'system-1.0', rather than 'kiji-1.0'. This avoids a namespace collision
      with layouts, etc.  Existing deployments with a 'kiji-1.0' instance
      format are still supported.
  * SCHEMA-151. Add org.kiji.schema.util.ProtocolVersion to manage
      format/protocol version compatibility.
  * SCHEMA-150. Update CLI tools to support composite entity IDs.
      Entity IDs can now be specified as:
        --entity-id=hbase=hex:deadc0de as hexadecimal HBase keys
        --entity-id=hbase=[utf8:]'hbase\x0akey\x00' as UTF-8 encoded HBase keys
        --entity-id=[kiji=]'kiji-key' for raw, hashed or hash-prefixed Kiji keys
        --entity-id="['component1', 2, 'comp3']" for Kiji formatted row keys.
  * SCHEMA-151. Stricter checking of layout "version" fields for compatibility
      with supported layout features. VersionInfo.get(Client/Cluster)DataVersion()
      now return a ProtocolVersion, not a string.
  * SCHEMA-3. Add support for composite entity ids. You can now create
      compound keys containing a mix of hashed, string, integer, and null
      components.
  * SCHEMA-175. kiji script can now use tools provided by kiji-mapreduce. To make
      kiji-mapreduce tools available for use through the kiji script, make sure
      the environment variable KIJI_MR_HOME is set to the path to a kiji-mapreduce
      distribution.
  * SCHEMA-153. Adds a getRegions() method to KijiTable. Returns logical
      region divisions in a kiji table.
  * SCHEMA-119. Remove TableLayoutSerializer class.
  * SCHEMA-147. Hide OperatorRowFilter. You should use AndRowFilter or
      OrRowFilter directly.
  * SCHEMA-118. KijiTableLayout constructors are now hidden. Create a new layout