@@ -5,6 +5,8 @@
 Version 1.0.0-rc5
 
 Version 1.0.0-rc4
+  * SCHEMA-211. Use "default" instance in default KijiURIBuilder.
+  * SCHEMA-208. Make KijiURIException unchecked.
   * SCHEMA-196. Instance format should not use "kiji" protocol namespace.
       Changes the instance format installed via 'kiji install' to
       'system-1.0', rather than 'kiji-1.0'. This avoids a namespace collision
